--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "recharts": "^2.10.3"
   },
   "scripts": {
     "start": "react-scripts start",
